# uspto_odp

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-package-conda.yml
__includes/: head-custom.html
_includes/: head-custom.html
controller/: uspto_odp_client.py
models/: foreign_priority.py  fw_stats.py  patent_assignment.py  patent_continuity.py  patent_documents.py  patent_file_wrapper.py  patent_status.py  patent_transactions.py
src/uspto_odp/: __init__.py
src/uspto_odp/controller/: uspto_odp_client.py
src/uspto_odp/models/: __init__.py  patent_continuity.py  patent_documents.py  patent_file_wrapper.py
tests/: conftest.py  test_patent_documents.py  test_uspto_odp_client.py
