[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uspto_odp"
version = "0.1"
description = "USPTO Open Data Portal Client"
authors = [
    {name = "Ken Thompson", email = "your.email@example.com"},
]
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.11.7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "coverage",
    "strenum>=0.4.10"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "uspto_odp",
    "uspto_odp.controller",
    "uspto_odp.models"
]

[tool.setuptools.package-data]
uspto_odp = ["py.typed", "*.pyi", "**/*.pyi"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]